@@ -1061,6 +1061,9 @@ Release 0.19.2 - Unreleased
     HADOOP-5816. Fixes a problem in the KeyFieldBasedComparator to do with
     ArrayIndexOutOfBounds exception. (He Yongqiang via ddas)
 
+    HADOOP-5951. Add Apache license header to StorageInfo.java.  (Suresh
+    Srinivas via szetszwo)
+
 Release 0.19.1 - 2009-02-23 
 
   IMPROVEMENTS
